--- a/force-app/main/default/classes/BatchToCalculateTheAvalLeavesTest.cls
+++ b/force-app/main/default/classes/BatchToCalculateTheAvalLeavesTest.cls
@@ -3,19 +3,25 @@ public class BatchToCalculateTheAvalLeavesTest {
     
     public static testMethod void testBatchclass() {
          user adminuser = TestDataFactory.createAdminUser(true);
+        
          user adminuser2 = TestDataFactory.createAdminUser(true);
         Resource_Role__c role;
        EMS_LM_Leave__c annualtype;
         EMS_LM_Leave__c loptype;
         EMS_LM_Leave__c bretype;
         EMS_LM_Leave__c compofftype;
+        EMS_LM_Leave__c paternitytype;
+       EMS_LM_Leave__c  Bereavementtype;
+            
         Account acc;Contact con;
         system.runAs(adminuser){
            role = TestDataFactory.createResourceRole(true);
          annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
          loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
-         bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+        //bretype  = TestDataFactory.createLeaveType('Maternity Leave',true);
          compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+            paternitytype = TestDataFactory.createLeaveType('Paternity Leave',true);
+            Bereavementtype = TestDataFactory.createLeaveType('Bereavement Leave',true);
           acc = TestDataFactory.createAccount(true);
 		 con=  TestDataFactory.createResourceContact(acc.id, false);
          con.EMS_RM_Employee_Id__c = 'CP10234';
@@ -36,14 +42,18 @@ public class BatchToCalculateTheAvalLeavesTest {
         }
         system.runAs(adminuser2){
          EMS_LM_Leave_Credit__c lcreditAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1.6,annualtype.id, true);
-         EMS_LM_Leave_Credit__c bretAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),20,bretype.id, true);
+        // EMS_LM_Leave_Credit__c bretAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),20,bretype.id, true);
          EMS_LM_Leave_Credit__c commOffAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,compofftype.id, true);
+           EMS_LM_Leave_Credit__c patAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,paternitytype.id, true); 
+            EMS_LM_Leave_Credit__c berveAnnual = Testdatafactory.createLeaveCredit(con.id,system.today(),1,Bereavementtype.id, true);
         }
         system.runAs(u){
           List<EMS_LM_Leave_History__c> hlist = new List<EMS_LM_Leave_History__c>();
          hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, false, null));
-          hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(6), system.today().adddays(7), bretype.id, false, null));
+         // hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(90), system.today().adddays(7), bretype.id, false, null));
           hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), compofftype.id, false, null));
+            hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(7), system.today().adddays(9), paternitytype.id, false, null));
+             hlist.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(7), system.today().adddays(9), Bereavementtype.id, false, null));
          insert hlist;
         }
             TriggerBase.bypass('Contact');
